# topsy

./: Dockerfile  LICENSE  README.md  accumulator_vertex_shader.glsl  colormap_fragment_shader.glsl  colormap_vertex_shader.glsl  main.py  multiresolution_geometry.py  pyproject.toml  scalebar.py  scalebar_fragment_shader.glsl  scalebar_geometry_shader.glsl  scalebar_vertex_shader.glsl  sph_fragment_shader.glsl  sph_geometry_shader.glsl  sph_vertex_shader.glsl  text.py
.github/workflows/: build-test.yaml  publish.yaml
src/pynbody_vis/: __init__.py  config.py  visualizer.py
src/pynbody_vis/shaders/: colormap_fragment_shader.glsl  sph_geometry_shader.glsl
src/topsy/: __init__.py  __main__.py  buffers.py  canvas.py  cell_layout.py  colorbar.py  colormap.py  config.py  drawreason.py  line.py  line_integral_convolution.py  loader.py  multiresolution_sph.py  overlay.py  particle_buffers.py  performance.py  periodic_sph.py  progressive_render.py  scalebar.py  simcube.py  sph.py  split_buffers.py  text.py  util.py  view_synchronizer.py  visualizer.py  visualizer_wgpu.py
src/topsy/canvas/: __init__.py  generic_colormap.py  jupyter.py  offscreen.py  qt.py
src/topsy/canvas/qt/: __init__.py  colormap.py  lineedit.py  recording.py
src/topsy/colormap/: __init__.py  implementation.py  surface.py  ui.py
src/topsy/recorder/: __init__.py  interpolator.py
src/topsy/shaders/: colormap.wgsl  drawtexture_fragment_shader.glsl  line.wgsl  line_integral_convolution.wgsl  overlay.wgsl  scalebar_geometry_shader.glsl  scalebar_vertex_shader.glsl  smooth.wgsl  sph.wgsl  sph_fragment_shader.glsl  sph_geometry_shader.glsl  sph_vertex_shader.glsl  surface.wgsl
tests/: run_tests_in_docker.sh  test_arg_parse.py  test_cell_layout.py  test_colormap.py  test_interpolation.py  test_jupyter_interface.py  test_progression.py  test_render.py  test_render_mode.py  test_render_output.py  test_scalebar.py  test_smooth.py  test_split_buffers.py  test_synchronizer.py
