[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pynbody-vis"
authors = [{name = "Andrew Pontzen", email = "a.pontzen@ucl.ac.uk"}]
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
readme = 'README.md'
requires-python = ">=3.7"

dependencies = [
    "moderngl >=5.6.4",
    "moderngl-window >=2.4.0",
    "numpy >=1.16.0",
    "pynbody >=1.3.0",
    "PyOpenGL >=3.1.5",
    "matplotlib >=3.6.0",
    "pillow >=8.3.0",
    "pyglet >=2.0.0"
]


[project.scripts]
pynbody-vis = "pynbody_vis:main"

[project.urls]
Home = "https://github.com/pynbody/pynbody-vis"