[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "topsy"
authors = [{name = "Andrew Pontzen", email = "a.pontzen@ucl.ac.uk"}]
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
readme = 'README.md'
requires-python = ">=3.11"

dependencies = [
    "numpy >=1.16.0",
    "pynbody >=2.1.1",
    "matplotlib >=3.6.0",
    "pillow >=9.5.0", # 9.5.0 needed for Image.frombytes accepting memoryview
    "wgpu >= 0.22, <0.23",
    "jupyter_rfb >=0.4.1",
    "tqdm >=4.62.0",
    "opencv-python >=4.8.0",
    "PySide6 >= 6.5.0", # windowing
    "superqt>=0.7.3", # rangeslider
    "rendercanvas>=2.0.3",
]

[project.optional-dependencies]
test = [
    "pytest >=6.2.0",
    "pytest-ipywidgets"
]

[project.scripts]
topsy = "topsy:main"

[project.urls]
Home = "https://github.com/pynbody/topsy"
